# VU-OP-Nr.2-Studentu-pazymiai-naujas

./: CMakeLists.txt  Makefile  README.md  funkcijos.cpp  generavimas.h  headeriai.h  laikas.h  main-masyvai.cpp  main-vektoriai.cpp  main.cpp  struktura.cpp  struktura.h  testai.cpp
doxygen/: annotated.html  class_atsitiktinis_sk-members.html  class_atsitiktinis_sk.html  class_laiko_matavimas-members.html  class_laiko_matavimas.html  class_studentas-members.html  class_studentas.html  class_zmogus-members.html  class_zmogus.html  classes.html  files.html  generavimas_8h_source.html  headeriai_8h_source.html  hierarchy.html  index.html  laikas_8h_source.html  md__r_e_a_d_m_e.html  pages.html  struktura_8h_source.html
doxygen/search/: all_0.js  all_1.js  all_3.js  classes_0.js  classes_1.js  classes_3.js  pages_0.js  searchdata.js
install/: ProgramInstallSetup.msi
